# rust_learning2

./: README.md
api-server/: Cargo.toml  db.sqlite
api-server/migrations/: 20240201175051_todos.sql  20240202111340_todos.sql
api-server/src/: api.rs  dbpool.rs  error.rs  lib.rs  main.rs  router.rs  somethng.rs  todo.rs  tracer.rs
api_client/: Cargo.toml
api_client/src/: cli.rs  main.rs
async_profiling/: Cargo.toml
async_runtimes/: Cargo.toml  mixing_async_with_sync.txt
async_runtimes/src/: main.rs  observer.rs
asyncable/: Cargo.toml
asyncable/src/: concurrent_iter.rs  executor.rs  joinables.rs  lib.rs  main.rs  pinning.rs  pinning_heap.rs  selectables.rs  simplefuture.rs  splitables.rs  timerfuture.rs
awaitables/: Cargo.toml
awaitables/src/: lib.rs  main.rs  pinning_detail.rs  pinning_heap.rs  simple_future.rs
blog/src/: lib.rs  main.rs  post.rs  post2.rs
branches/src/: main.rs
collections/src/: main.rs
concurrency01/: Cargo.toml
concurrency01/src/: main.rs
concurrency02_mutex/: Cargo.toml
concurrency02_mutex/src/: main.rs
control_flow/src/: lib.rs
correctness_tests/: .gitignore  Cargo.toml
correctness_tests/src/: lib.rs
counter_iced/: Cargo.toml
counter_iced/src/: main.rs
data_structures/: Cargo.toml  testfile.txt
data_structures/src/: main.rs
drop_check/src/: main.rs
dynotest/: Cargo.toml
dynotest/src/: lib.rs
enums/src/: main.rs
error_handling/src/: hello.txt  main.rs
fatpointer_dispatch/: Cargo.toml
fatpointer_dispatch/src/: collect_m.rs  extend_m.rs  lib.rs
flattened/: Cargo.toml
flattened/src/: lib.rs
funct_clojures/: Cargo.toml
funct_clojures/src/: main.rs
functions/src/: main.rs
generics/src/: main.rs
guessing_game/src/: main.rs
memory_allocators/: Cargo.toml
mutables_data/: Cargo.toml
optimization/: Cargo.toml
parallel_iter/: Cargo.toml  test.mdx
patterns/: main.s
pointers_cell/: Cargo.toml
structs_data/: Cargo.toml
test_exampls/: Cargo.toml
traits_advanced/: Cargo.toml
tshirt_co/: Cargo.toml
webserver_single_thread/: Cargo.toml
zlib_wrapper/: Cargo.toml  build.rs
(+53 files in other folders)
