[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "macros",
] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
